--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
